# zwaves

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: release.yml
bellman/src/groth16/: mod.rs  verifier.rs
bellman/src/groth16/tests/: mod.rs
bellman/tests/: mimc.rs
circuit/: Cargo.toml  LICENSE_MIT
circuit/.mainframer/: config.yml  ignore  remoteignore
circuit/src/: bit_iterator.rs  hasher.rs  lib.rs
js/: index.js  package-lock.json  package.json  webpack.config.js
sapling-crypto/: Cargo.toml
sapling-crypto/benches/: pedersen_hash.rs
sapling-crypto/src/circuit/: boolean.rs  mod.rs  num.rs
sapling-crypto/src/circuit/test/: mod.rs
sapling-crypto/src/jubjub/: edwards.rs  mod.rs
zwaves_circuit/: Cargo.toml
zwaves_circuit/src/: lib.rs
zwaves_circuit/src/circuit/: mod.rs
zwaves_circuit/src/test/: mod.rs  pedersen_test.rs
zwaves_demo/: deploy.js  package-lock.json  test.js
zwaves_demo/ride/: zwaves.ride
zwaves_jni/: .gitignore  Cargo.toml  README.md  build_all.sh  build_linux32.sh  build_linux64.sh  build_mac.sh  build_mac_cross.sh  build_win32.bat  build_win32_cross.sh  build_win64.bat  build_win64_cross.sh  osxcross_setup.sh
zwaves_jni/.cargo/: config
zwaves_jni/example/: Bls12PedersenMerkleTree.java  Groth16.java  Makefile
zwaves_jni/javalib/: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
zwaves_jni/javalib/src/main/java/com/wavesplatform/zwaves/: Bls12PedersenMerkleTree.java  Groth16.java  JNILibrary.java  ZWavesJNILibrary.java
zwaves_jni/javalib/src/main/java/com/wavesplatform/zwaves/bls12/: Groth16.java  JNILibrary.java  PedersenMerkleTree.java
zwaves_jni/javalib/src/main/java/com/wavesplatform/zwaves/bn256/: Groth16.java
zwaves_jni/javalib/src/main/java/com/wavesplatform/zwaves_jni/: Bls12PedersenMerkleTree.java  Groth16.java  ZwavesJni.java
zwaves_jni/javalib/src/test/java/com/wavesplatform/zwaves/: Bls12PedersenMerkleTree.java  Bls12PedersenMerkleTreeTest.java  Groth16Test.java  PedersenMerkleTreeTest.java
zwaves_jni/javalib/src/test/java/com/wavesplatform/zwaves/bls12/: Groth16Test.java  PedersenMerkleTreeTest.java
zwaves_jni/javalib/src/test/java/com/wavesplatform/zwaves/bn256/: Groth16Test.java
zwaves_jni/src/: lib.rs
zwaves_jni/src/bls12/: mod.rs
zwaves_jni/src/bls12/tests/: mod.rs
zwaves_jni/src/bn256/: mod.rs  serialization.rs  verifier.rs
zwaves_jni/src/test/: mod.rs
zwaves_jni/src/tests/: mod.rs
zwaves_node/: README.md  package-lock.json  package.json
zwaves_node/lib/: index.js
zwaves_node/native/: Cargo.toml
zwaves_node/native/src/: helpers.rs  lib.rs
zwaves_node/test/: test.js  test_deposit.js  test_edh.js  test_merklehash.js  test_nullifier.js  test_transfer.js  test_utxo_accumulator.js
zwaves_primitives/: Cargo.toml  README.md
zwaves_primitives/src/: bit_iterator.rs  byte_iterator.rs  field.rs  fieldtools.rs  hasher.rs  lib.rs  pedersen_hasher.rs  serialization.rs  transactions.rs  verifier.rs
zwaves_primitives/src/circuit/: bitify.rs  merkle_proof.rs  mod.rs  note.rs  ownership.rs  transactions.rs
zwaves_primitives/src/circuit/test/: compress_test.rs  merkle_proof_test.rs  mod.rs  transaction_test.rs
zwaves_primitives/src/serialization/: frs.rs  inputs.rs  mod.rs  objects.rs  params.rs  proof.rs  verifying_key.rs
zwaves_setup/: .gitignore  Cargo.toml
zwaves_setup/src/: main.rs
zwaves_setup/src/circuit/: mod.rs
zwaves_wasm/: Cargo.toml  build.bat
zwaves_wasm/src/: lib.rs
