[package]
name = "circuit"
version = "0.1.0"
authors = ["Igor Gulamov <igor.gulamov@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
wasm = ["web-sys"]


[dependencies]
wasm-bindgen = "0.2.50"
rand = {version = "0.7.2", features=["getrandom", "wasm-bindgen"]}
#getrandom = {version="0.1.12", features=["wasm-bindgen"]}
bellman = { version = "0.1.0", default-features = false }
sapling-crypto = { git = "https://github.com/zcash-hackworks/sapling-crypto", rev = "eb409fa3cf8df215ae8d35f5e385751a0c5ffb85", default-features = false }
pairing = "0.14"
web-sys = {version = "0.3.17", optional = true, features = ["console", "Performance", "Window"]}


console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }


[dev-dependencies]
wasm-bindgen-test = "0.2.50"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# debug = true

