[package]
name = "zwaves_circuit"
version = "0.1.0"
authors = ["Igor Gulamov <igor.gulamov@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies]
rand = "0.4"
bellman = { version = "0.1.0", default-features = false }
sapling-crypto = { path = "../sapling-crypto", default-features = false }
pairing = "0.14"
zwaves_primitives = {path = "../zwaves_primitives"}
byteorder = "1.3.2"

[dependencies.blake2-rfc]
git = "https://github.com/gtank/blake2-rfc"
rev = "7a5b5fc99ae483a0043db7547fb79a6fa44b88a9"
