[package]
name = "zwaves_circuit"
version = "0.1.0"
authors = ["Igor Gulamov <igor.gulamov@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies]
rand = "0.4"
bellman = { version = "0.1.0" }
sapling-crypto = { path = "../sapling-crypto" }
pairing = "0.14"
zwaves_primitives = {path = "../zwaves_primitives"}
byteorder = "1.3.2"
itertools = "0.8.2"
arrayvec = "0.5.1"

[dependencies.blake2-rfc]
git = "https://github.com/gtank/blake2-rfc"
rev = "7a5b5fc99ae483a0043db7547fb79a6fa44b88a9"
