[package]
name = "zwaves_jni"
version = "0.1.0"
authors = ["Igor Gulamov <igor.gulamov@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "zwaves_jni"

[dependencies]
bellman = { version = "0.1.0", default-features = false }
zwaves_primitives = { path = "../zwaves_primitives", default-features = false }
pairing = "0.14"
num = "0.2"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.11.0"
bincode = "1.2.0"
jni = "0.14.0"