[package]
name = "zwaves_jni"
version = "0.2.0"
authors = ["Igor Gulamov <igor.gulamov@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
name = "zwaves_jni"

[[bin]]
path = "src/bn256/bin/show_test_vectors.rs"
name="show_test_vectors"

[dependencies]
bellman = { version = "0.1.0" }
zwaves_primitives = { path = "../zwaves_primitives"}
sapling-crypto = { path = "../sapling-crypto" }
pairing = "0.14"
pairing_ce = "0.18" # for bn256
num = "0.2"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.11.0"
jni = "0.14.0"
byteorder = "1"
rand = "0.4"

# for bn256
[dependencies.ff]
version = "=0.7"
features = ["derive"]
package = "ff_ce"

[dev-dependencies]
test-case = "3.2.1"
