[package]
name = "zwaves_primitives"
version = "0.1.0"
authors = ["Igor Gulamov <igor.gulamov@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies]
rand = "0.4"
bellman = { version = "0.1.0"}
sapling-crypto = { path = "../sapling-crypto"}
pairing = "0.14"
num = "0.2"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.11.0"
bincode = "1.2.0"
byteorder = "1"