[package]
name = "zwaves_setup"
version = "0.1.0"
authors = ["Igor Gulamov <igor.gulamov@gmail.com>"]
edition = "2018"

[[bin]]
name = "new"

[[bin]]
name = "contribute"

[[bin]]
name = "list"


[dependencies]
rand = "0.4"
bellman = { version = "0.1.0" }
sapling-crypto = { path = "../sapling-crypto" }
pairing = "0.14"
phase2 = "0.2.2"
hex = "0.3.1"
zwaves_circuit = { path = "../zwaves_circuit" }

[dependencies.blake2-rfc]
git = "https://github.com/gtank/blake2-rfc"
rev = "7a5b5fc99ae483a0043db7547fb79a6fa44b88a9"
