[package]
name = "zwaves_wasm"
version = "0.1.0"
authors = ["Igor Gulamov <igor.gulamov@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
wasm = ["web-sys"]


[dependencies]
wasm-bindgen = "0.2.50"
rand = "0.4"
getrandom = {version = "0.1.1", features=["wasm-bindgen"]}

bellman = { version = "0.1.0"}
sapling-crypto = { path = "../sapling-crypto" }
zwaves_primitives = {path = "../zwaves_primitives"}
zwaves_circuit = {path = "../zwaves_circuit"}

pairing = "0.14"
web-sys = {version = "0.3.17", optional = true, features = ["console", "Performance", "Window"]}


console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }



